refactor(core): 重构玩家管理与显示逻辑，简化事件注册
- 移除 `sorted` 状态和 `spectators` 集合，统一使用 `isISpec` 判断玩家是否在局外
- 新增 `handlePlayerJoin` 分离加入逻辑，统一显示管理 (`applyActiveDisplay` / `clearPlayerDisplay`)
- `addToWaiting` / `removeFromWaiting` 自动更新颜色前缀，不再依赖排序状态
- `startGame` 不再要求已排序，直接开始
- 简化 `EventListener` 和 `CommandHandler` 构造依赖，移除不需要的 `plugin` 引用
- 使用 `Math.clamp` 替代手动边界检查，引入 `Objects.requireNonNull` 消除警告
- `tick` 中增加 `isFrozen` 检查，修复因服务器冻结导致的计时问题
- 提升版本至 1.1